# opencv_playground

./: .gitignore  CMakeLists.txt  README.md
app_blend/: main.cpp
app_brightness/: CMakeLists.txt  main.cpp
app_hello_world/: main.cpp
app_mask/: main.cpp
lib/: util.hpp
